--- a/battle.html
+++ b/battle.html
@@ -288,8 +288,8 @@
       }
 
       function calculateDamageFromAttack(pokemon) {
-        let amoundOfDamageGood = (15 * pokemon.attack) / pokemonBad[0].defense;
-        let amoundOfDamageBad = (2 * pokemonBad[0].attack) / pokemon.defense;
+        let amoundOfDamageGood = (2 * pokemon.attack) / pokemonBad[0].defense;
+        let amoundOfDamageBad = (15 * pokemonBad[0].attack) / pokemon.defense;
 
         let amountOfDamageGoodRound = Math.round(amoundOfDamageGood);
         let amountOfDamageBadRound = Math.round(amoundOfDamageBad);
@@ -303,11 +303,11 @@
           pokemonLevelTxt.innerHTML = `${pokemon.level} Level`;
           pokemonMoneyTxt.innerHTML = `${pokemon.money} Penger`;
         } 
-        if (pokemonBad && pokemonBad.name === "pikachu") {
+        if (pokemonBad) {
           nameOfBadPokemon.innerHTML = `${pokemonBad.name}`;
-          badPokemonHpTxt.innerHTML = `${pokemonBad.hp} / 35 HP`;
-          badPokemonLevelTxt.innerHTML = `${pokemonBad.level} / 20 Level`;
-          badPokemonMoneyTxt.innerHTML = `${pokemonBad.money} / 0 Penger`;
+          badPokemonHpTxt.innerHTML = `${pokemonBad.hp} / ${pokemonBad.originalHp} HP`;
+          badPokemonLevelTxt.innerHTML = `${pokemonBad.level} Level`;
+          badPokemonMoneyTxt.innerHTML = `${pokemonBad.money} Penger`;
         }
       }
       
