--- a/battle.html
+++ b/battle.html
@@ -93,7 +93,7 @@
           (pokemon) => pokemon.name === "raichu"
         ); 
         if (savedRaichu) {
-          showGoodPokemon([savedRaichu]);
+          showBadPokemon([savedRaichu]);
         } else {
           fetchAndShowBadPokemon("pikachu");
         }
@@ -344,16 +344,17 @@
           pokemonBad[0].level -= 5;
           updateInnerHtml(pokemon, pokemonBad[0]);
 
+          
+            alert(
+            "Du har funnet thunder stone, men er utenfor Alola, og evolves til raichu"
+          );
+          getPokemon("raichu");
           const index = pokemonBad.findIndex(
             (pokemon) => pokemon.name === "pikachu"
           );
           if (index !== -1) {
             pokemonBad.splice(index, 1);
             localStorage.setItem("pokemonBad", JSON.stringify(pokemonBad));
-            alert(
-            "Du har funnet thunder stone, men er utenfor Alola, og evolves til raichu"
-          );
-          getPokemon("raichu");
           localStorage.setItem("pokemonBad", JSON.stringify(pokemonBad));
           updateInnerHtml(pokemon, pokemonBad[0]);
           console.log("hva er her", pokemonBad);
