endret på navn i p tag og navn på knapp

--- a/battle.html
+++ b/battle.html
@@ -27,7 +27,7 @@
       </div>
       
       <div class="txt-container">
-        <p id="name-of-bad-pokemon">Pikachu</p>
+        <p id="name-of-bad-pokemon">Motstanderens navn</p>
         <p id="bad-pokemon-hp-txt">HP</p>
         <p id="bad-pokemon-level-txt">Level</p>
         <p id="bad-pokemon-money-txt">Penger</p>
@@ -47,7 +47,7 @@
         width="120px"
         height=""
       />
-      <input type="button" value="Pikachu" id="attack-btn" />
+      <input type="button" value="Evil pokemon" id="attack-btn" />
     </div>
     <div class="pokemon-all-container">
       <div class="pokemon-container"></div>
