--- a/battle.html
+++ b/battle.html
@@ -20,14 +20,14 @@
   <body>
     <div class="info-container">
       <div class="txt-container">
-        <p id="name-of-pokemon">Pokemon Navn</p>
+        <p id="name-of-pokemon">Din pokemon sitt navn</p>
         <p id="pokemon-hp-txt">HP</p>
         <p id="pokemon-level-txt">Level</p>
         <p id="pokemon-money-txt">Penger</p>
       </div>
       
       <div class="txt-container">
-        <p id="name-of-bad-pokemon">Motstanderens navn</p>
+        <p id="name-of-bad-pokemon">Motstanderens sin pokemons navn</p>
         <p id="bad-pokemon-hp-txt">HP</p>
         <p id="bad-pokemon-level-txt">Level</p>
         <p id="bad-pokemon-money-txt">Penger</p>
