la til to h tagger

--- a/battle.html
+++ b/battle.html
@@ -18,6 +18,8 @@
     </style>
   </head>
   <body>
+    <h1>Pokemon Battle</h1>
+    <h3>her skal en kort forklart på battle være</h3>
     <div class="info-container">
       <div class="txt-container">
         <p id="name-of-pokemon">Din pokemon sitt navn</p>
