endret navn på knapp

--- a/battle.html
+++ b/battle.html
@@ -49,7 +49,7 @@
         width="120px"
         height=""
       />
-      <input type="button" value="Evil pokemon" id="attack-btn" />
+      <input type="button" value="Motstanderens pokemon" id="attack-btn" />
     </div>
     <div class="pokemon-all-container">
       <div class="pokemon-container"></div>
