lager to nye funksjoner til defense

--- a/battle.html
+++ b/battle.html
@@ -338,6 +338,14 @@
         }
       }
 
+      function badPokemonDefense() {
+
+      }
+
+      function goodPokemonDefense() {
+        
+      }
+
       function evolvePokemon(pokemon) {
         if (pokemonBad[0].name === "pikachu" && pokemonBad[0].level === 5) {
          
