--- a/battle.html
+++ b/battle.html
@@ -297,8 +297,10 @@
 
       function calculateDamageFromAttack(pokemon) {
         let amoundOfDamageGood = (2 * pokemon.attack) / pokemonBad[0].defense;
-        let amoundOfDamageBad = (15 * pokemonBad[0].attack) / pokemon.defense;
+        let amoundOfDamageBad = (2 * pokemonBad[0].attack) / pokemon.defense;
 
+        let amountOfSpecialDammageGood = (2 * pokemon.specialAttack) / pokemonBad[0].specialDefense;
+        let amountOfSpecialDamageBad = (2 * pokemonBad[0].specialAttack) / pokemon.specialDefense;
         let amountOfDamageGoodRound = Math.round(amoundOfDamageGood);
         let amountOfDamageBadRound = Math.round(amoundOfDamageBad);
 
@@ -343,7 +345,7 @@
       }
 
       function goodPokemonDefense() {
-        
+
       }
 
       function evolvePokemon(pokemon) {
