--- a/battle.html
+++ b/battle.html
@@ -280,11 +280,11 @@
 
       function attack(pokemon) {
         if (pokemonBad[0].hp > 0) {
-          let { amountOfDamageGoodRound } = calculateDamageFromAttack(
+          let { amountOfDamageGoodRound } = calculateDamageAndDefense(
             pokemon,
             pokemonBad[0]
           ); // setning tatt fra chat
-          let { amountOfSpecialDamageGoodRound } = calculateDamageFromAttack(
+          let { amountOfSpecialDamageGoodRound } = calculateDamageAndDefense(
             pokemon,
             pokemonBad[0]
           ); // gjentar setning, endrer på navn
@@ -301,20 +301,20 @@
         }
       }
 
-      function calculateDamageFromAttack(pokemon) {
+      function calculateDamageAndDefense(pokemon) {
         let amoundOfDamageGood = (5 * pokemon.attack) / pokemonBad[0].defense;
         let amoundOfDamageBad = (5 * pokemonBad[0].attack) / pokemon.defense;
 
-        let amountOfSpecialDamageGood = (5 * pokemon.specialAttack) / (pokemonBad[0].specialDefense + pokemonBad[0].speed);
-        let amountOfSpecialDamageBad = (5 * pokemonBad[0].specialAttack) / (pokemon.specialDefense + pokemon.speed);
+        let amountOfDefenseGood = (5 * pokemon.specialAttack) / (pokemonBad[0].specialDefense + pokemonBad[0].speed);
+        let amountOfDefenseBad = (5 * pokemonBad[0].specialAttack) / (pokemon.specialDefense + pokemon.speed);
 
 
         let amountOfDamageGoodRound = Math.round(amoundOfDamageGood);
         let amountOfDamageBadRound = Math.round(amoundOfDamageBad);
-        let amountOfSpecialDamageGoodRound = Math.round(amountOfSpecialDamageGood);
-        let amountOfSpecialDamageBadRound = Math.round(amountOfSpecialDamageBad);
+        let amountOfDefenseGoodRound = Math.round(amountOfDefenseGood);
+        let amountOfDefenseBadRound = Math.round(amountOfDefenseBad);
 
-        return { amountOfDamageGoodRound, amountOfDamageBadRound, amountOfSpecialDamageGoodRound, amountOfSpecialDamageBadRound };
+        return { amountOfDamageGoodRound, amountOfDamageBadRound, amountOfDefenseGoodRound, amountOfDefenseBadRound };
       }
       function updateInnerHtml(pokemon, pokemonBad) {
         if (pokemon) {
@@ -334,7 +334,7 @@
 
       function badGuyAttack(pokemon) {
         if (pokemon.hp > 0 && pokemonBad[0].hp > 0) {
-          let { amountOfDamageBadRound } = calculateDamageFromAttack(
+          let { amountOfDamageBadRound } = calculateDamageAndDefense(
             pokemon,
             pokemonBad
           );
@@ -351,13 +351,13 @@
       }
 
       function badPokemonDefense(pokemon) {
-        let { amountOfSpecialDamageBadRound } = calculateDamageFromAttack(
+        let { amountOfDefenseBadRound } = calculateDamageAndDefense(
             pokemon,
             pokemonBad[0]
           ); // gjentar setning, endrer på navn
-          pokemonBad[0].hp += amountOfSpecialDamageBadRound;
+          pokemonBad[0].hp += amountOfDefenseBadRound;
           alert(
-            `${pokemonBad[0].name} har defended seg mot ${pokemon.name} og klarer å få ${amountOfSpecialDamageBadRound} poeng`
+            `${pokemonBad[0].name} har defended seg mot ${pokemon.name} og klarer å få ${amountOfDefenseBadRound} poeng`
           );
           console.log(pokemon);
           console.log(pokemonBad);
@@ -367,15 +367,15 @@
       }
 
       function goodPokemonDefense(pokemon) {
-        let { amountOfSpecialDamageGoodRound } = calculateDamageFromAttack(
+        let { amountOfDefenseGoodRound } = calculateDamageAndDefense(
             pokemon,
             pokemonBad[0]
           ); // gjentar setning, endrer på navn
         
 
-          pokemonGood.hp += amountOfSpecialDamageGoodRound;
+          pokemonGood.hp += amountOfDefenseGoodRound;
           alert(
-            `${pokemon.name} har defended seg mot ${pokemonBad[0].name} og klarer å få ${amountOfSpecialDamageGoodRound} poeng`
+            `${pokemon.name} har defended seg mot ${pokemonBad[0].name} og klarer å få ${amountOfDefenseGoodRound} poeng`
           );
           console.log(pokemon);
           console.log(pokemonBad);
